--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -15,11 +16,22 @@
 </head>
 
 <body>
-
-  
+  <header class="main-nav">
+    <h1>Fun Bus</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
      
   <div class="container home">
-   
+    <section>
+      <img src="img/fun-bus.jpg" alt="A Little Bus in the Sand">
+      <h2>Welcome To Fun BUs</h2>
+      <p>Traveling blogger pretty website website travelblogger adventure pretty theme. Blogger design simple design, whimsical blogger design blogger blogger pretty traveler theme. Traveler fun excursion traveling Travel adventure modern blogger cute.</p>
+    </section>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
