Desktop version finished. Commencing mobile.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
   </header>
      
   <div class="container home">
-    <section>
-      <img src="img/fun-bus.jpg" alt="A Little Bus in the Sand">
-      <h2>Welcome To Fun BUs</h2>
-      <p>Traveling blogger pretty website website travelblogger adventure pretty theme. Blogger design simple design, whimsical blogger design blogger blogger pretty traveler theme. Traveler fun excursion traveling Travel adventure modern blogger cute.</p>
+    <section class="content-header">
+      <div class="img-content">
+          <img src="img/fun-bus.jpg" alt="A Little Bus in the Sand">
+      </div>
+      <div class="text-content">
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Traveling blogger pretty website website travelblogger adventure pretty theme. Blogger design simple design, whimsical blogger design blogger blogger pretty traveler theme. Traveler fun excursion traveling Travel adventure modern blogger cute.</p>
+      </div>
+      
     </section>
     <section class="content-section">
       <div class="text-content">
@@ -63,17 +68,17 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="">Sign Me Up!</a></div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="">Sign Me Up!</a></div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>
       </div>
     </section>
   </div><!-- container -->
